--- a/app/src/main/res/drawable/circle_dittexte.xml
+++ b/app/src/main/res/drawable/circle_dittexte.xml
@@ -2,13 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="0sp" />
+        android:width="0.5dp"
+        android:color="#023E47" /> <!-- 将边框颜色改为红色 -->
     <corners
-        android:radius="8dp"
-        />
-    <solid
-        android:color="#D0F4FEFF"/>
+        android:radius="8dp" />
+    <gradient
+        android:startColor="#5BA4E1"
+        android:endColor="#85B1F1EA"
+        android:angle="45"/>
     <size
         android:width="21dp"
-        android:height="36dp"/>
+        android:height="36dp" />
 </shape>
